# open.mp-Qawno-macOS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README-macOS.md  README.md  ToDo.md  build-macos.sh  qawno.qrc
cmake/: QawnoInfo.plist.in
i18n/: qawno_ar.ts  qawno_cs.ts  qawno_da.ts  qawno_de.ts  qawno_el.ts  qawno_es.ts  qawno_fi.ts  qawno_fr.ts  qawno_hi.ts  qawno_hu.ts  qawno_id.ts  qawno_it.ts  qawno_ja.ts  qawno_ko.ts  qawno_nb.ts  qawno_nl.ts  qawno_pl.ts  qawno_pt.ts  qawno_ro.ts  qawno_ru.ts  qawno_sv.ts  qawno_th.ts  qawno_tr.ts  qawno_uk.ts  qawno_vi.ts  qawno_zh_CN.ts  qawno_zh_TW.ts
scripts/: pawn-cc.sh  run-pawncc-wine.sh
src/: AboutDialog.cpp  AboutDialog.h  Compiler.cpp  Compiler.h  ConsentDialog.cpp  ConsentDialog.h  CrossOver.cpp  CrossOver.h  EditorWidget.cpp  EditorWidget.h  FindDialog.cpp  FindDialog.h  IconLoader.cpp  IconLoader.h  Installer.cpp  Installer.h  IosToggle.cpp  IosToggle.h  LocaleManager.cpp  LocaleManager.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Server.cpp  Server.h  SettingsDialog.cpp  SettingsDialog.h  Spinner.cpp  Spinner.h  StatusBar.cpp  StatusBar.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TelemetryClient.cpp  TelemetryClient.h  UpdateChecker.cpp  UpdateChecker.h  UpdatePromptDialog.cpp  UpdatePromptDialog.h  WineManager.cpp  (+2 more)
